[project]
name = "botdetection"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Alexandre Flament", email = "alex.andre@al-f.net" }
]
dependencies = [
    "pydantic>=2.6.3",
    "redis>=5.0.2",
    "flask>=3.0.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/botdetection"]

[tool.ruff]
line-length = 160
