[project]
name = "botdetection"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Markus Heiser", email = "markus.heiser@darmarIT.de" },
    { name = "Alexandre Flament", email = "alex.andre@al-f.net" }
]
dependencies = [
    "pydantic>=2.6.3",
    "redis>=5.0.2",
    "flask>=3.0.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/botdetection"]

[tool.ruff]
line-length = 160

[tool.pylint]
max-line-length = 160

[tool.pylint."messages_control"]
disable = [
    "W0603", # Using the global statement
    "W0613", # Unused argument 'ndocs'
    "W0511", # TODO
    "W0105", # String statement has no effect
    "R",
    "R0912", # Too many branches
    "R0915", # Too many statements
    "R1702", # Too many nested blocks
    "R0913", # Too many arguments
    "R0914", # Too many local variables
    "R0902", # Too many instance attributes
    "C",
]
